# wot-directory-webthings

./: .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: wot-discovery.yml
examples/: list.rs
src/: directory.rs  discovery.rs  lib.rs
