[package]
name = "wot-discovery"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Web of Things (WoT) Thing server"
repository = "https://github.com/sifis-home/wot-discovery"
keywords = ["wot", "WebofThings"]

[dependencies]
serde_json = "1.0"
wot-td = { git = "https://github.com/sifis-home/wot-td", version = "0.1.0" }
